--- a/testeef.csproj
+++ b/testeef.csproj
@@ -1,12 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.5.1"/>
   </ItemGroup>
-
-
 </Project>
